--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,10 @@ jobs:
           
           # Install and run pagecrypt with the correct positional password argument
           npm install -g pagecrypt
-          pagecrypt _site/gwy/index.html _site/gwy/index_crypted.html "${{ secrets.GWY_PASSWORD }}"
+          pagecrypt _site/gwy/index.html _site/gwy/index_crypted.html "${{ secrets.GWY_PASSWORD }}" \
+            --message "备考小窝 - 访问受限" \
+            --instructions "请输入密码进入备考禁地" \
+            --remember 30
           mv _site/gwy/index_crypted.html _site/gwy/index.html
           
           echo "--- After Encryption ---"
