--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,10 +108,9 @@ jobs:
           
           # Install and run pagecrypt with the correct positional password argument
           npm install -g pagecrypt
-          pagecrypt _site/gwy/index.html _site/gwy/index_crypted.html "${{ secrets.GWY_PASSWORD }}" \
-            --message "备考小窝 - 访问受限" \
-            --instructions "请输入密码进入备考禁地" \
-            --remember 30
+          pagecrypt _site/gwy/index.html _site/gwy/index_crypted.html "${{ secrets.GWY_PASSWORD }}" -r 30
+          
+          # Overwrite the original file
           mv _site/gwy/index_crypted.html _site/gwy/index.html
           
           echo "--- After Encryption ---"
