--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,10 +111,14 @@ jobs:
           pagecrypt _site/gwy/index.html _site/gwy/index_crypted.html "${{ secrets.GWY_PASSWORD }}"
           mv _site/gwy/index_crypted.html _site/gwy/index.html
           
-          # Localize the lock screen UI
-          sed -i 's/Password Protected/备考禁地 - 请输入密码/g' _site/gwy/index.html
-          sed -i 's/placeholder="Password"/placeholder="请输入密码"/g' _site/gwy/index.html
-          sed -i 's/>Submit</>解锁</g' _site/gwy/index.html
+          # Localize the PageCrypt UI based on actual source analysis
+          sed -i 's/<title>Protected Page<\/title>/<title>备考小窝 - 访问受限<\/title>/g' _site/gwy/index.html
+          sed -i 's/This page is password protected\./请输入密码进入备考禁地/g' _site/gwy/index.html
+          sed -i 's/aria-label=Password/aria-label="密码"/g' _site/gwy/index.html
+          sed -i 's/value=Submit/value="解锁"/g' _site/gwy/index.html
+          sed -i 's/Loading\.\.\./正在加载.../g' _site/gwy/index.html
+          sed -i 's/Decrypting\.\.\./正在解密.../g' _site/gwy/index.html
+          sed -i 's/Wrong password\./密码错误/g' _site/gwy/index.html
           
           echo "--- After Encryption ---"
           ls -l _site/gwy/
