--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,8 @@ collections:
     output: true
   gwy_logs:
     output: true
+  gwy_reports:
+    output: true
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
