--- a/.github/workflows/weekly_report.yml
+++ b/.github/workflows/weekly_report.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout master branch
         uses: actions/checkout@v4
         with:
-          ref: master
+          token: ${{ secrets.PRIVATE_REPO_TOKEN }} # Use PAT to get push access later
           
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -31,12 +31,21 @@ jobs:
           OPENAI_API_BASE: ${{ secrets.LLM_API_BASE_URL }}
         run: python crawlers/weekly_summary_generator.py
         
-      - name: Commit and push report
+      - name: Commit and push report to blog-source
         run: |
+          # Clone the private repo's main branch
+          git clone --branch main https://x-access-token:${{ secrets.PRIVATE_REPO_TOKEN }}@github.com/skyfuryonline/blog-source.git source-repo
+          
+          # Copy the newly generated report(s) into the clone
+          # Ensure the _gwy_reports directory exists
+          mkdir -p source-repo/_gwy_reports
+          cp -r _gwy_reports/. source-repo/_gwy_reports/
+          
+          cd source-repo
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add _gwy_reports/
-          # 如果有新文件才提交
+          
           if ! git diff --staged --quiet; then
             git commit -m "docs(gwy): Generate weekly report"
             git push
