ci: Adapt workflows for private image repository

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,13 @@ jobs:
       
       - name: Move private content into main
         run: |
-          # Move the log and report directories from the temp checkout into main
-          mv private-source/_gwy_logs main/
-          mv private-source/_gwy_reports main/
+          # Ensure target directories exist in the main checkout
+          mkdir -p main/_gwy_logs main/_gwy_reports main/img
+          # Move the log, report, and image directories from the temp checkout into main
+          mv private-source/_gwy_logs/. main/_gwy_logs/
+          mv private-source/_gwy_reports/. main/_gwy_reports/
+          # Use cp for images in case the directory already contains public images
+          cp -r private-source/img/. main/img/
 
       - name: Move data into main directory
         run: |
