--- a/crawlers/config.json
+++ b/crawlers/config.json
@@ -27,7 +27,7 @@
   ],
   "llm_profiles": {
     "default_summary": {
-      "model": "qwen3-vl-32b-instruct",
+      "model": "qwen3-max-2026-01-23",
       "prompt":"你应该使用中文进行回答。请将以下文章内容总结为一段300字以内的中文摘要，要求：\n1. 提炼核心原理与关键观点，突出文章的中心思想与主要结论；\n2. 语言简洁明了，使人能快速理解要点；\n3. 若文章涉及技术、科研或理论内容，请在摘要后生成一个简短、直观的例子（不超过100字）帮助理解；\n4. 从文章中提取3-5个能代表核心内容的关键词；\n5. 请严格按照以下结构输出，不要添加额外说明或多余文字：摘要+例子+关键字"
     },
     "academic_summary": {
